    - signals can be caught and handled by registered callbacks
    - Fixed wireshark dissectors
    - Changed the used ethertype from 0x8042 to 0x88B5 (IEEE Std 802 - Local Experimental Ethertype 1)
    - Increased DESSERT_MAXEXTDATALEN from 253 to 254
    - DESSERT_MAXFRAMELEN is now of size ETH_FRAME_LEN and not ETHER_MAX_LEN anymore (the latter includes the 4 byte CRC)

20100606 - 0.94
    - On Linux the TAP hwaddr is now derived from eth0 (if it exists)
    - Current libtool version = 1.1.1

20100323 - 0.93
    - Updated documentation (spelling, grammar, etc)
    - Removed src/callbacks; the code is now in libdessert-extra

20100319 - 0.92
    - Updated, restructured, and extended documentation

20100214 - 0.91
    - libtool version = 1.1.0
    - Added some code from several daemons in src/callbacks dir for general usage
    - Moved some code from src/libdessert to src/callbacks to slim down library core
    - Moved prev pointer in dessert_meshif_t to end of structure; dessert_meshif_t and dessert_sysif_t are
      now equal again in the first few fields
    - Added type parameter to dessert_msg_trace_initiate and dessert_msg_trace_dump to use these function with new
      bidirectional tracing feature
    - Added callback that decrements the IPv4 TTL or IPv6 Hop-Limit field
    - Removed pid file parameter from dessert_init; use dessert_pid to write pid file manually
    - Removed DESSERT_OPT_PID and DESSERT_OPT_NOPID flags because they were never used
    - Added private function _dessert_cli_cmd_pid to include pid file name in conf file; cli callback is automatically registered
    - Replaced dessert_ext_getdatalen macro with inline function
    - Fixed bug in _dessert_sysif_init_thread
    - Set IFF_NO_PI flag for TUN interfaces to make packet handling easier
    - Modified dessert_syssend and dessert_syssend_msg to be able to handle ip datagrams
    - Fixed max length condition in dessert_msg_ethencap

20100213 - 0.90